--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.9'
 
 services:
 
@@ -8,7 +8,7 @@ services:
       - "8222:8222"
 
   client-gateway:
-    build: ./client-gateway
+    build: ./client-gateway     
     ports:
       - ${CLIENT_GATEWAY_PORT}:3000
     volumes:
@@ -17,6 +17,11 @@ services:
     environment:
       - PORT=3000
       - NATS_SERVERS=nats://nats-server:4222
+    develop:
+      watch:
+        - path: ./client-gateway/src
+          action: sync+restart
+
 
   products-ms:
     build: ./products-ms
@@ -27,6 +32,10 @@ services:
       - PORT=3001
       - NATS_SERVERS=nats://nats-server:4222
       - DATABASE_URL=file:./dev.db
+    develop:
+      watch:
+        - path: ./product-ms/src
+          action: sync+restart
 
   # Orders-MS
   orders-ms:
@@ -40,6 +49,10 @@ services:
       - PORT=3002
       - NATS_SERVERS=nats://nats-server:4222
       - DATABASE_URL=postgresql://postgres:123456@orders-db:5432/orders?schema=public
+    develop:
+      watch:
+        - path: ./orders-ms/src
+          action: sync+restart
 
   # Orders-DB
   orders-db:
